--- a/src/app/primeiro.html
+++ b/src/app/primeiro.html
@@ -21,7 +21,7 @@
       <h3>
         contato
       </h3>
-        <img  id='icone'src="../../public/pexels-element-digital-1293261.jpg">
+        <img width="500"height="500"  id="icone="src="../../public/pexels-element-digital-1293261.jpg">
        
     <link src="https://vinigamer.online/" />blabla
           </div>
