--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,15 +21,13 @@
 }
 
 body {
+  border-bottom: black;
   background-color: black;
   color: crimson;
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+ 
+    
+   
 }
     title{
       background-color: black;
