--- a/src/app/primeiro.html
+++ b/src/app/primeiro.html
@@ -10,6 +10,7 @@
     <p>feito do 0</p>
 </head>
 <body>
+
     <div id='interface'>
 
         <h1>
@@ -21,19 +22,20 @@
       <h3>
         contato
       </h3>
-        <img width="500"height="500"  id="icone="src="../../public/pexels-element-digital-1293261.jpg">
+        <img width="400"height="400"  id="icone="src="../../public/pexels-element-digital-1293261.jpg">
+        <a href=  "https://vinigamer.online/">ta ai o link</a>
        
-    <link src="https://vinigamer.online/" />blabla
+
           </div>
         <legend>como era antigamente</legend>
-<h2>
+<p>
     hoje em dia é console nao mais fliperama de uma maneira geral
-</h2>
+</p>
       
    
 </body>
 <footer>
-    vai ter links depois
-    iso é a estrutura basica
+  agora tem link
+    <legend>@copyright &copy;by vini</legend>
 </footer>
 </html>
