--- a/src/app/primeiro.html
+++ b/src/app/primeiro.html
@@ -21,19 +21,33 @@
       <h3>
         contato
       </h3>
-        <img  id='icone'src="../../public/pexels-element-digital-1293261.jpg">
+        <img width="450px"  id='icone'src="../../public/pexels-element-digital-1293261.jpg">
        
-    <link src="https://vinigamer.online/" />blabla
+    <a href="https://vinigamer.online/">link externo(vdd)</a> 
           </div>
         <legend>como era antigamente</legend>
 <h2>
     hoje em dia é console nao mais fliperama de uma maneira geral
 </h2>
-      
-   
+   <table id="tabela" >
+    <caption id="tabela2"> especifacoes</caption>
+      <tr>
+todos os jogam tem uma determinada especifição 
+      </tr>
+      <td>
+        consultar aqui(falso link)
+      </td>
+      <tr>
+    loja de app
+        <a href="https://www.xbox.com/pt-BR/games">xbox</a>
+      </tr>
+    
+   </table>   
+   <article id="obs"><p>20/06/2023 o link ainda funciona</p> </article>
 </body>
 <footer>
     vai ter links depois
     iso é a estrutura basica
+   
 </footer>
 </html>
