--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 body {
   background-color: black;
   color: crimson;
-  color: rgb(var(--foreground-rgb));
+ 
   background: linear-gradient(
       to bottom,
       transparent,
@@ -45,3 +45,6 @@ body {
   div#interface{width: 900px;margin: 0px auto 0px auto;box-shadow:0px 0px 10px chartreuse;padding: 10px;;}
   div#icone{position:absolute;left: 800px;top: auto;}
 
+#tabela{ color: blanchedalmond;border: green;border: 10px solid goldenrod;margin:auto ;width: auto;text-align: justify; }
+#tabela2{ color: blanchedalmond;border: green;border: 10px solid goldenrod;margin:auto ;width: auto;text-align: center;}
+#obs{ color:purple 10px solid blanchedalmond;margin:auto ;width: auto;text-align:justify;}
